--- a/GreekKino/Info.plist
+++ b/GreekKino/Info.plist
@@ -6,5 +6,7 @@
 	<string>$(BASE_URL)</string>
 	<key>GAME_ID</key>
 	<string>$(GAME_ID)</string>
+	<key>RESULTS_LIMIT</key>
+	<string>$(RESULTS_LIMIT)</string>
 </dict>
 </plist>
